# binge-rss

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  meson.build  meson_options.txt  rustfmt.toml
.github/workflows/: badges.yml  checks.yml
.reuse/: dep5
build-aux/: io.github.schneegans.BingeRSS.json
data/: BingeRSS.desktop.in  BingeRSS.gschema.xml.in  BingeRSS.metainfo.xml.in  io.github.schneegans.BingeRSS.desktop  io.github.schneegans.BingeRSS.gschema.xml  io.github.schneegans.BingeRSS.metainfo.xml  meson.build
data/resources/: resources.gresource.xml  style.css
data/resources/ui/: FeedContentPage.ui  FeedPage.ui  FeedRow.ui  Window.ui
resources/: resources.gresource.xml  style.css
resources/ui/: FeedContentPage.ui  FeedItemList.ui  Window.ui
src/: application.rs  config.rs.in  main.rs  meson.build  sources.rs
src/app/: mod.rs
src/components/: feed.rs  feed_content_page.rs  feed_item.rs  feed_item_list.rs  feed_page.rs  feed_row.rs  mod.rs  settings.rs  window.rs
src/model/: feed.rs  feed_item.rs  feed_settings.rs  mod.rs
src/view/: feed_content_page.rs  feed_page.rs  feed_row.rs  mod.rs  window.rs
tools/: cloc.sh  vendor.sh
