[package]
name = "binge-rss"
version = "0.1.0"
edition = "2021"

[build-dependencies]
gtk = { version = "0.4.8", package = "gtk4" }

[dependencies]
gtk = { version = "0.4.8", package = "gtk4" }
adw = { version = "0.1.1", package = "libadwaita" }
reqwest = { version = "0.11.12", features = ["blocking"] }
rss = "2.0.1"
futures = "0.3.24"
