[package]
name = "binge-rss"
version = "0.1.0"
edition = "2021"

[build-dependencies]
gtk = { version = "0.4.8", package = "gtk4" }

[dependencies]
gtk = { version = "0.4.8", package = "gtk4" }
adw = { version = "0.1.1", package = "libadwaita" }
reqwest = { version = "0.11.12", features = ["blocking"] }
feed-rs = "1.1.0"
futures = "0.3.24"
url = "2.3.1"
once_cell = "1.15.0"
