# SPDX-FileCopyrightText: Simon Schneegans <code@simonschneegans.de>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "binge-rss"
version = "0.1.0"
edition = "2021"

[build-dependencies]
glib-build-tools = "0.16.3"
gtk = { version = "0.5.2", package = "gtk4" }

[dependencies]
gtk = { version = "0.5.2", package = "gtk4" }
adw = { version = "0.2.0-alpha.3", package = "libadwaita", features = ["v1_2"] }
reqwest = { version = "0.11.12", features = ["blocking"] }
tokio = "1.21.2"
feed-rs = "1.1.0"
futures = "0.3.24"
url = "2.3.1"
once_cell = "1.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
