install_data(
  'io.github.schneegans.BingeRSS.gschema.xml',
  install_dir: datadir / 'glib-2.0' / 'schemas'
)

install_data(
  'io.github.schneegans.BingeRSS.metainfo.xml',
  install_dir: datadir / 'metainfo'
)

install_data(
  'io.github.schneegans.BingeRSS.desktop',
  install_dir: datadir / 'applications'
)

install_data(
  'icons/io.github.schneegans.BingeRSS.svg',
  install_dir: iconsdir / 'hicolor' / 'scalable' / 'apps'
)

