##########################################################################################
#                            ___ _               ___  ___ ___                            #
#                           | _ |_)_ _  __ _ ___| _ \/ __/ __|                           #
#                           | _ \ | ' \/ _` / -_)   /\__ \__ \                           #
#                           |___/_|_||_\__, \___|_|_\|___/___/                           #
#                                      |___/                                             #
##########################################################################################

# SPDX-FileCopyrightText: Simon Schneegans <code@simonschneegans.de>
# SPDX-License-Identifier: MIT

install_data(
  'io.github.schneegans.BingeRSS.gschema.xml',
  install_dir: datadir / 'glib-2.0' / 'schemas'
)

install_data(
  'io.github.schneegans.BingeRSS.metainfo.xml',
  install_dir: datadir / 'metainfo'
)

install_data(
  'io.github.schneegans.BingeRSS.desktop',
  install_dir: datadir / 'applications'
)

install_data(
  'icons/io.github.schneegans.BingeRSS.svg',
  install_dir: iconsdir / 'hicolor' / 'scalable' / 'apps'
)

